@startuml

[*] --> AWAITING_INPUT

AWAITING_INPUT --> REQUIREMENTS_EVALUATION : INPUT_RECEIVED

REQUIREMENTS_EVALUATION --> SCRIPT_GENERATION : REQUIREMENTS_EVALUATED
REQUIREMENTS_EVALUATION --> INVALID_REQUIREMENTS : REQUIREMENTS_REJECTED
REQUIREMENTS_EVALUATION : evaluateRequirementsAction()

SCRIPT_GENERATION --> SOLUTION_VERIFICATION : SCRIPT_GENERATED
SCRIPT_GENERATION : generateScriptAction()

SOLUTION_VERIFICATION --> SUCCESSFUL_COMPLETION : SOLUTION_VERIFIED
SOLUTION_VERIFICATION --> REQUIREMENTS_REVISION : SOLUTION_REJECTED
SOLUTION_VERIFICATION : verifySolutionAction()

REQUIREMENTS_REVISION --> SCRIPT_GENERATION : REQUIREMENTS_REWRITTEN
REQUIREMENTS_REVISION : rewriteRequirementsAction()

@enduml
